[package]
name = "rust-chdnbd"
version = "0.1.0"
authors = ["ksv1986 <ksv0x07c2@gmail.com>"]
repository = "https://github.com/ksv1986/rchd-nbd"
keywords = ["nbd", "network-block-device", "chd"]
edition = "2018"

[dependencies]
chd =  { version = "0.1", path = "chd", features = ["write_nop"] }
nbd = "0.2.3"
